--- a/gitsearch-middleware/package.json
+++ b/gitsearch-middleware/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
+    "@octokit/auth-app": "^4.0.9",
     "@octokit/core": "^4.2.0",
     "koa": "^2.14.1",
     "limiter": "^2.1.0",
