--- a/gitsearch-middleware/package.json
+++ b/gitsearch-middleware/package.json
@@ -23,6 +23,7 @@
     "@types/koa__cors": "^3.3.0",
     "@types/koa__router": "^12.0.0",
     "dotenv": "^16.0.3",
-    "dotenv-cli": "^7.0.0"
+    "dotenv-cli": "^7.0.0",
+    "ts-node": "^10.9.1"
   }
 }
