compile to js first...

--- a/gitsearch-middleware/package.json
+++ b/gitsearch-middleware/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "A simple BFF for GitSearch",
   "scripts": {
-    "start": "dotenv -e .env ts-node ./src/app.ts",
+    "start": "tsc && dotenv -e .env node build/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
