--- a/gitsearch-middleware/tsconfig.json
+++ b/gitsearch-middleware/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "include": ["src/**/*"],
   "compilerOptions": {
+    "outDir": "build",
+    "declaration": true,
     "target": "ES2015",
     "module": "commonjs",
     "strict": true,
