--- a/gitsearch-middleware/package.json
+++ b/gitsearch-middleware/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "A simple BFF for GitSearch",
   "scripts": {
-    "start": "tsc && dotenv -e .env node build/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build" : "npm install && tsc",
+    "start": "dotenv -e .env node build/app.js"
   },
   "author": "",
   "license": "MIT",
