--- a/gitsearch-middleware/package.json
+++ b/gitsearch-middleware/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "A simple BFF for GitSearch",
   "scripts": {
-    "build" : "npm install && tsc",
+    "build": "npm install && tsc && npm run build:client",
+    "build:client": "cd ../gitsearch-client && npm install && npm run build",
     "start": "dotenv -e .env node build/app.js"
   },
   "author": "",
@@ -14,6 +15,8 @@
     "@octokit/auth-app": "^4.0.9",
     "@octokit/core": "^4.2.0",
     "koa": "^2.14.1",
+    "koa-mount": "^4.0.0",
+    "koa-static": "^5.0.0",
     "limiter": "^2.1.0",
     "typescript": "^4.9.4"
   },
@@ -22,6 +25,8 @@
     "@types/koa": "^2.13.5",
     "@types/koa__cors": "^3.3.0",
     "@types/koa__router": "^12.0.0",
+    "@types/koa-mount": "^4.0.2",
+    "@types/koa-static": "^4.0.2",
     "dotenv": "^16.0.3",
     "dotenv-cli": "^7.0.0",
     "ts-node": "^10.9.1"
