--- a/gitsearch-middleware/package.json
+++ b/gitsearch-middleware/package.json
@@ -16,6 +16,7 @@
     "@octokit/core": "^4.2.0",
     "koa": "^2.14.1",
     "koa-mount": "^4.0.0",
+    "koa-send": "^5.0.1",
     "koa-static": "^5.0.0",
     "limiter": "^2.1.0",
     "typescript": "^4.9.4"
