--- a/gitsearch-client/public/manifest.json
+++ b/gitsearch-client/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Git Librarian",
+  "short_name": "Git Search",
   "name": "A simple search UI for git repositories",
   "icons": [
     {
