--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "A simple UI for searching github repositories",
   "scripts": {
-    "build": "npm run build:server && npm run build:client",
+    "build": "npm install && npm run build:server && npm run build:client",
     "build:client": "cd ./gitsearch-client && npm install && npm run build",
     "build:server" : "cd ./gitsearch-middleware npm install && tsc",
     "start": "dotenv -e .env node ./gitsearch-middleware/build/app.js"
+  },
+  "dependencies": {
+    "typescript": "^4.9.4"
   },
   "repository": {
     "type": "git",
